# kernel_regression

./: Cargo.toml  LICENSE  README.md  debug_output.txt
conda_recipe/: meta.yaml  meta.yaml~
py-kernel-regression/: Cargo.toml  pyproject.toml
py-kernel-regression/examples/: compare_reg.ipynb  main.py  test.py
py-kernel-regression/src/: lib.rs
rust-kernel-regression/: Cargo.toml
rust-kernel-regression/src/: kr.rs
src/: gp.rs  kr.rs  lib.rs  main.rs
