[package]
name = "kernel_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kernel_regression"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15"
pyo3 = "0.18.1"
rstat = "0.6"
rand_chacha = "0.3.1"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
ndarray-linalg = "0.16"
