[package]
name = "py-kernel-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_kernel_regression"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
ndarray = "0.15"
numpy = "0.20"
rust-kernel-regression = { path = "../rust-kernel-regression" }
rayon = "1.9.0"
